@@ -1,5 +1,8 @@
 dgm-lib v2.2.3
  * Added method `dgm::Path<TileNavPoint>::getLength()`
+ * `dgm::TileNavmesh::getPath` was marked deprecated
+	* `dgm::TileNavmesh::computePath` which returns `std::optional` should be used instead
+
 dgm-lib v2.2.2
  * Added `dgm::DynamicBuffer::isValidIndex` for testing whether there is something at index
  * Added `dgm::DynamicBuffer::at` which either returns `std::reference_wrapper` for item at index or empty `std::optional`
